# em-sort

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: app.py  em-sort_linux.spec  entities.py  exceptions.py  gui.py  parser.py  sorter.py  utils.py
src/emsort/: app.py  em-sort.spec  entities.py  gui.py  main.py  sorter.py
tests/: conftest.py  test_entities.py  test_parser.py  test_sorter.py
tests/testdata/: schematic1.xlsx  schematic1_sorted.xlsx
