[tool.poetry]
name = "em-sort"
version = "0.1.0"
description = ""
authors = ["Karakchiev Aleksandr <realrushen@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
openpyxl = "^3.0.9"
PySimpleGUI = "^4.60.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
